--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "karui-auth",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Julian0066.github.io/React-Karui-Auth",
   "dependencies": {
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.6"
   }
 }
