commit antes de la migracion a vite

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "karui-auth",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
